--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "babel-preset-react-native-stage-0": "^1.0.1",
     "jest-react-native": "^18.0.0",
-    "nodemon": "^1.17.1",
+    "nodemon": "^1.18.3",
     "react-test-renderer": "16.2.0"
   },
   "scripts": {
@@ -25,7 +25,7 @@
     "express": "^4.16.2",
     "immutable": "^3.8.2",
     "react": "16.2.0",
-    "react-native": "0.52.0",
+    "react-native": "^0.56.0",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera",
     "react-native-qrcode-scanner": "^1.0.1",
     "react-navigation": "^1.4.0",
