--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.2.0",
     "rethinkdb": "^2.3.3",
     "socket.io": "^2.0.4",
