--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "0.0.1",
   "private": "false",
   "devDependencies": {
-    "babel-preset-react-native-stage-0": "^1.0.1",
-    "jest-react-native": "^18.0.0",
-    "nodemon": "^1.18.4",
-    "react-test-renderer": "16.4.2",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-jest": "^23.4.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react-native": "^4.0.0",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "jest-react-native": "^18.0.0",
+    "nodemon": "^1.18.4",
+    "npm-run-all": "^4.1.5",
+    "react-test-renderer": "16.4.2"
   },
   "scripts": {
-    "server": "node_modules/nodemon/bin/nodemon.js -- node_modules/babel-cli/bin/babel-node.js ./src/server",
+    "server-script": "node_modules/nodemon/bin/nodemon.js -- node_modules/babel-cli/bin/babel-node.js ./src/server",
+    "rethinkdb": "rethinkdb",
+    "server": "npm-run-all --parallel rethinkdb server-script",
+    "bundle": "cd android && ./gradlew assembleRelease",
+    "bundle-deploy": "adb uninstall com.climbinglog && react-native run-android --variant=release",
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
